[package]
name = "src4392"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.1.0"
packed_struct = {version = "0.10.1", default_features = false }
fixed = {version = "1.23.1", default_features=false }
